# execution

./: .clang-tidy  CMakeLists.txt  Makefile  README.md  allocator__aware__move_8hpp_source.html  almost__scheduler_8hpp_source.html  annotated.html  annotated_dup.js  apply__sender_8hpp_source.html  as__awaitable_8hpp_source.html  as__except__ptr_8hpp_source.html  atomic__intrusive__stack_8hpp_source.html  await__result__type_8hpp_source.html  await__suspend__result_8hpp_source.html  awaitable__sender_8hpp_source.html  basic__operation_8hpp_source.html  basic__receiver_8hpp_source.html  basic__sender_8hpp_source.html  basic__state_8hpp_source.html  bulk_8hpp_source.html  call__result__t_8hpp_source.html  callable_8hpp_source.html  check__type__alias__exist_8hpp_source.html  child__type_8hpp_source.html  class__type_8hpp_source.html  classbeman_1_1execution_1_1inplace__stop__callback-members.html  classbeman_1_1execution_1_1inplace__stop__callback.html  classbeman_1_1execution_1_1inplace__stop__callback__coll__graph.map  classbeman_1_1execution_1_1inplace__stop__callback__coll__graph.md5  classbeman_1_1execution_1_1inplace__stop__callback__inherit__graph.map  classbeman_1_1execution_1_1inplace__stop__callback__inherit__graph.md5  classbeman_1_1execution_1_1inplace__stop__source-members.html  classbeman_1_1execution_1_1inplace__stop__source.html  classbeman_1_1execution_1_1inplace__stop__token-members.html  classbeman_1_1execution_1_1inplace__stop__token.html  classbeman_1_1execution_1_1never__stop__token-members.html  classbeman_1_1execution_1_1never__stop__token.html  classbeman_1_1execution_1_1run__loop-members.html  classbeman_1_1execution_1_1run__loop.html  classbeman_1_1execution_1_1simple__counting__scope-members.html  (+342 more)
.github/workflows/: pre-commit.yml
cmake/: CMakeLinuxPresets.json
docs/: Doxyfile  contributing.md  doxygen-awesome.css  header.html  intro-examples.md  overview.md  resources.md
examples/: CMakeLists.txt  allocator.cpp  doc-just.cpp  doc-just_error.cpp  doc-just_stopped.cpp  intro-1-hello-world.cpp  intro-2-hello-async.cpp  intro-5-consumer.cpp  intro-timer.hpp  just_stopped.cpp  playground.cpp  sender-demo.cpp  stop_token.cpp  stopping.cpp  when_all-cancel.cpp
include/beman/execution/: execution.hpp  functional.hpp  stop_token.hpp
include/beman/execution/detail/: allocator_aware_move.hpp  almost_scheduler.hpp  apply_sender.hpp  as_awaitable.hpp  as_except_ptr.hpp  atomic_intrusive_stack.hpp  await_result_type.hpp  await_suspend_result.hpp  awaitable_sender.hpp  basic_operation.hpp  basic_receiver.hpp  basic_sender.hpp  basic_state.hpp  bulk.hpp  call_result_t.hpp  callable.hpp  check_type_alias_exist.hpp  child_type.hpp  class_type.hpp  common.hpp  completion_domain.hpp  completion_signature.hpp  completion_signatures.hpp  completion_signatures_for.hpp  completion_signatures_of_t.hpp  completion_tag.hpp  connect.hpp  connect_all.hpp  connect_all_result.hpp  connect_awaitable.hpp  connect_result_t.hpp  continues_on.hpp  decayed_same_as.hpp  decayed_tuple.hpp  decayed_type_list.hpp  decayed_typeof.hpp  decays_to.hpp  default_domain.hpp  default_impls.hpp  emplace_from.hpp  (+112 more)
include/beman/execution26/: execution.hpp  stop_token.hpp
include/beman/execution26/detail/: as_awaitable.hpp  basic_operation.hpp  basic_sender.hpp  basic_state.hpp  connect.hpp  connect_all.hpp  continues_on.hpp  default_impls.hpp  gather_signatures.hpp  get_completion_signatures.hpp  indices_for.hpp  inplace_stop_source.hpp  join_env.hpp  make_env.hpp  meta_combine.hpp  meta_filter.hpp  meta_prepend.hpp  meta_unique.hpp  on.hpp  product_type.hpp  run_loop.hpp  sched_attrs.hpp  schedule_from.hpp  sender_adaptor_closure.hpp  sender_awaitable.hpp  sender_decompose.hpp  single_sender_value_type.hpp  stop_callback_for_t.hpp  stop_source.hpp  sync_wait.hpp  then.hpp  transform_sender.hpp  with_awaitable_senders.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  concepts_0.js  functions_0.js  namespaces_0.js  pages_1.js  pages_2.js  pages_5.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/beman/execution/: CMakeLists.txt  execution.cpp
src/beman/execution26/: CMakeLists.txt
tests/beman/execution/: CMakeLists.txt  allocator-requirements-general.test.cpp  exec-awaitable.test.cpp  exec-bulk.test.cpp  exec-connect.test.cpp  exec-continues-on.test.cpp  exec-domain-default.test.cpp  exec-fwd-env.test.cpp  exec-general.test.cpp  exec-get-allocator.test.cpp  exec-get-compl-sched.test.cpp  exec-get-delegation-scheduler.test.cpp  exec-get-domain.test.cpp  exec-get-env.test.cpp  exec-get-scheduler.test.cpp  exec-get-stop-token.test.cpp  exec-getcomplsigs.test.cpp  exec-into-variant.test.cpp  exec-just.test.cpp  exec-let.test.cpp  exec-on.test.cpp  exec-opstate-start.test.cpp  exec-opstate.test.cpp  exec-read-env.test.cpp  exec-recv-concepts.test.cpp  exec-recv.test.cpp  exec-run-loop-general.test.cpp  exec-run-loop-types.test.cpp  exec-sched.test.cpp  exec-schedule-from.test.cpp  exec-schedule.test.cpp  exec-scounting.test.cpp  exec-set-error.test.cpp  exec-set-stopped.test.cpp  exec-set-value.test.cpp  exec-snd-apply.test.cpp  exec-snd-concepts.test.cpp  exec-snd-expos.test.cpp  exec-snd-transform.test.cpp  exec-split.test.cpp  (+46 more)
tests/beman/execution/include/test/: execution.hpp  stop_token.hpp  thread_pool.hpp
tests/beman/execution26/: CMakeLists.txt  exec-connect.test.cpp  exec-general.test.cpp  exec-let.test.cpp  exec-on.test.cpp  exec-snd-expos.test.cpp  exec-split.test.cpp  exec-sync-wait.test.cpp  exec-then.test.cpp  exec-with-awaitable-senders.test.cpp  execution-syn.test.cpp
tests/beman/execution26/include/test/: execution.hpp  stop_token.hpp  thread_pool.hpp
